改色階和標題

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="eyebrow">1987 - 2025 | 台灣氣象站歷史數據</p>
       <p class="eyebrow">2004 - 2024 | 台灣颱風放假機率</p>
       <p class="eyebrow">CWA opendata | 即時天氣與警特報</p>
-      <h1>小氣的相反</h1>
+      <h1>聽說你很大氣？</h1>
       <p class="subtitle">即時天氣與預報、颱風路徑與放假機率、歷史氣象數據查詢。</p>
     </div>
   </header>
@@ -106,6 +106,7 @@
         <div class="typhoon-side">
           <div class="legend" id="typhoonLegend">
             <div class="legend-title">放假機率色階</div>
+            <div class="legend-row"><span class="swatch" style="background:#ffffff"></span>0% (無資料)</div>
             <div class="legend-row"><span class="swatch" style="background:#1E90FF"></span>1-20% (極低)</div>
             <div class="legend-row"><span class="swatch" style="background:#32CD32"></span>21-40% (低)</div>
             <div class="legend-row"><span class="swatch" style="background:#FFFF00"></span>41-60% (中低)</div>
